--- a/index.html
+++ b/index.html
@@ -7,30 +7,34 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="calculator">
-        <div class="display">
+    <div class="container">
+        <input type="text" class="display" />
             <div class="buttons">
-                <button class="button btn-grey">AC</button>
-                <button class="button btn-grey">+/-</button>
-                <button class="button btn-grey">%</button>
-                <button class="button btn-orange">/</button>
-                <button class="button">7</button>
-                <button class="button">8</button>
-                <button class="button">9</button>
-                <button class="button btn-orange">*</button>
-                <button class="button">4</button>
-                <button class="button">5</button>
-                <button class="button">6</button>
-                <button class="button btn-orange">-</button>
-                <button class="button">1</button>
-                <button class="button">2</button>
-                <button class="button">3</button>
-                <button class="button btn-orange">+</button>
-                <button class="button zero-btn">0</button>
-                <button class="button">.</button>
-                <button class="button btn-orange">=</button>
+                <button class="operator" data-value="AC">AC</button>
+                <button class="operator" data-value="DEL">DEL</button>
+                <button class="operator" data-value="%">%</button>
+                <button class="operator" data-value="/">/</button>
+
+                <button data-value="7">7</button>
+                <button data-value="8">8</button>
+                <button data-value="9">9</button>
+                <button class="operator" data-value="*">*</button>
+
+                <button data-value="4">4</button>
+                <button data-value="5">5</button>
+                <button data-value="6">6</button>
+                <button class="operator" data-value="-">-</button>
+
+                <button data-value="1">1</button>
+                <button data-value="2">2</button>
+                <button data-value="3">3</button>
+                <button class="operator" data-value="+">+</button>
+
+                <button data-value="0">0</button>
+                <button data-value="00">00</button>
+                <button data-value=".">.</button>
+                <button class="operator" data-value="=">=</button>
             </div>
-        </div>
     </div>
     <script src="./main.js"></script>
 </body>
